--- a/index.html
+++ b/index.html
@@ -10,28 +10,48 @@
 <body>
     <!-- intestazione -->
     <header>
-        <!-- logo -->
-        <nav>
-            <span>Scarica</span>
-            <span>Perchè Discord</span>
-            <span>Nitro</span>
-            <span>Sicurezza</span>
-            <span>Assistenza</span>
-            <span class="login">Accedi</span>
-        </nav>
+        <img class="logo" src="img/logo.svg" alt="Logo">
+        <div class="container">            
+            <nav>
+                <span>Scarica</span>
+                <span>Perchè Discord</span>
+                <span>Nitro</span>
+                <span>Sicurezza</span>
+                <span>Assistenza</span>            
+            </nav>            
+        </div>
+        <span class="login">Accedi</span>  
     </header>
 
     <!-- jumbotron -->
     <section>
-        <h1>Il tuo posto per parlare</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda magni rerum veniam hic quo voluptate quas ab recusandae suscipit perspiciatis corrupti commodi rem odit, ducimus vitae fugit libero delectus omnis.</p>
-        <span class="download">&darr; Scarica per Mac</span>
-        <span class="open_browser">Apri Discord nel tuo browser</span>
+        <img src="img/jumbo.png" alt="Sfondo">
+        <div class="container">
+            <h1>Il tuo posto per parlare</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda magni rerum veniam hic quo voluptate quas ab recusandae suscipit perspiciatis corrupti commodi rem odit, ducimus vitae fugit libero delectus omnis.</p>
+            <div class="buttons">
+                <span class="download">&darr; Scarica per Mac</span>
+                <span class="open_browser">Apri Discord nel tuo browser</span>
+            </div>            
+        </div>
     </section>
 
     <!-- corpo -->
     <main>
+        <!-- prima sezione -->
+        <div class="first_section">
 
+        </div>
+
+        <!-- seconda sezione -->
+        <div class="second_section">
+
+        </div>
+
+        <!-- terza sezione -->
+        <div class="third_section">
+
+        </div>
     </main>
 
     <!-- footer -->
