Quasi conclusa la prima sezione

--- a/index.html
+++ b/index.html
@@ -40,7 +40,15 @@
     <main>
         <!-- prima sezione -->
         <div class="first_section">
-
+            <div class="col_sx">
+                <img src="img/item1.svg" alt="Immagine">
+            </div>
+            <div class="col_dx">
+                <div class="text_first_section">
+                    <h1>Un luogo a invito con tutto lo spazio necessario per parlare</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci aliquam ea maiores quam! Commodi quas in totam dolores laboriosam neque illum quae eos? Error quod voluptatem harum molestiae rerum quibusdam?</p>
+                </div>                
+            </div>
         </div>
 
         <!-- seconda sezione -->
