Conclusa prima sezione, iniziato footer

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
     <main>
         <!-- prima sezione -->
         <div class="first_section">
-            <div class="col_sx">
+            <div class="col_sx float">
                 <img src="img/item1.svg" alt="Immagine">
             </div>
-            <div class="col_dx">
+            <div class="col_dx float">
                 <div class="text_first_section">
                     <h1>Un luogo a invito con tutto lo spazio necessario per parlare</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci aliquam ea maiores quam! Commodi quas in totam dolores laboriosam neque illum quae eos? Error quod voluptatem harum molestiae rerum quibusdam?</p>
@@ -64,7 +64,37 @@
 
     <!-- footer -->
     <footer>
+        <div class="footer_margin">
+            <!-- prima colonna -->
+            <div class="first_column float">
+                <h1>Il tuo posto per parlare</h1>
+                <img src="img/ita.png" alt="Ita">
+                <span>Italiano &or;</span>
+                <i class="fa-brands fa-twitter"></i>
+            </div>
 
+            <!-- seconda colonna -->
+            <div class="second_column float">
+
+            </div>
+
+            <!-- terza colonna -->
+            <div class="third_column float">
+
+            </div>
+
+            <!-- quarta colonna -->
+            <div class="fourth_column float">
+
+            </div>
+
+            <!-- quinta colonna -->
+            <div class="fifth_column float">
+
+            </div>
+        </div>
+        
+        
     </footer>
 </body>
 </html>
