Concluso header, jumbotron, prima sezione e footer

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discord replica</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -70,27 +71,57 @@
                 <h1>Il tuo posto per parlare</h1>
                 <img src="img/ita.png" alt="Ita">
                 <span>Italiano &or;</span>
-                <i class="fa-brands fa-twitter"></i>
+                <br>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-instagram"></i>
+                <i class="fab fa-facebook"></i>
+                <i class="fab fa-youtube"></i>
             </div>
 
             <!-- seconda colonna -->
             <div class="second_column float">
-
+                <p class="first_option footer_options">Prodotto</p>
+                <p class="other_options footer_options">Scarica</p>
+                <p class="other_options footer_options">Perchè Discord</p>
+                <p class="other_options footer_options">Nitro</p>
+                <p class="other_options footer_options">Sicurezza</p>
+                <p class="other_options footer_options">Assistenza</p>
             </div>
 
             <!-- terza colonna -->
             <div class="third_column float">
-
+                <p class="first_option footer_options">Compagnia</p>
+                <p class="other_options footer_options">Chi siamo</p>
+                <p class="other_options footer_options">Lavora con noi</p>
+                <p class="other_options footer_options">Marchio</p>
+                <p class="other_options footer_options">Redazione</p>
+                <p class="other_options footer_options">Negozio</p>
             </div>
 
             <!-- quarta colonna -->
             <div class="fourth_column float">
-
+                <p class="first_option footer_options">Risorse</p>
+                <p class="other_options footer_options">Chi siamo</p>
+                <p class="other_options footer_options">Lavora con noi</p>
+                <p class="other_options footer_options">Marchio</p>
+                <p class="other_options footer_options">Redazione</p>
+                <p class="other_options footer_options">Negozio</p>
+                <p class="other_options footer_options">Compagnia</p>
+                <p class="other_options footer_options">Chi siamo</p>
+                <p class="other_options footer_options">Lavora con noi</p>
+                <p class="other_options footer_options">Marchio</p>
+                <p class="other_options footer_options">Redazione</p>
+                <p class="other_options footer_options">Negozio</p>
             </div>
 
             <!-- quinta colonna -->
             <div class="fifth_column float">
-
+                <p class="first_option footer_options">Compagnia</p>
+                <p class="other_options footer_options">Chi siamo</p>
+                <p class="other_options footer_options">Lavora con noi</p>
+                <p class="other_options footer_options">Marchio</p>
+                <p class="other_options footer_options">Redazione</p>
+                <p class="other_options footer_options">Negozio</p>
             </div>
         </div>
         
